Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-98191

QMediaPlayer position reported incorrectly for flac files after a seek

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.2.3, 6.3.0 Alpha
    • 6.2.1
    • Multimedia
    • None
    • Windows 10 20H2 64-bit, MSVC 2019
    • Windows
    • 633cf2057f4f10f0e02dbc851827856c8ed93499 (qt/qtmultimedia/dev) ba9f36c76c2ed42811ed2685daf666cab524f711 (qt/qtmultimedia/6.2)

    Description

      After a seek while playing flac files, the song position reported by QMediaPlayer is incorrect, restarting from zero regardless of the seek position, although the song position being played actually seems to be the correct position defined by the seek operation. This problem can be reproduced by playing a flac file through the Media Player example, where after a seek the position slider will start increasing from zero. This problem does not seem to happen with other file formats, such as mp3.

       

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-98191
          # Subject Branch Project Status CR V

          Activity

            People

              anrocha André De La Rocha (Inactive)
              anrocha André De La Rocha (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes