Windows: Fix position reported by QMediaPlayer after seek

QMediaPlayer position was being reported incorrectly for flac files
after a seek operation or after pausing/restarting, likely due to a
bug in Media Foundation. This patch adds a workaround to detect this
condition and correct reported positions.

Fixes: QTBUG-98191
Change-Id: If58eae67dbc369f45bba889108f61704103e7c94
Reviewed-by: Piotr Srebrny <piotr.srebrny@qt.io>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>
(cherry picked from commit 633cf2057f4f10f0e02dbc851827856c8ed93499)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>