src/multimedia/platform/windows/player/mfplayersession_p.h
@@ -174,6 +174,9 @@ private:
     qint64 m_timeCounter = 0;
     UINT64 m_duration = 0;
     bool m_updatingTopology = false;
+    qint64 m_lastSeekPos = 0;
+    MFTIME m_lastSeekSysTime = 0;
+    bool m_altTiming = false;
 
     enum Command
     {
